--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,20 @@
         android:theme="@style/Theme.PetTinder"
         tools:targetApi="31">
         <activity
+            android:name=".PetfindingActivity"
+            android:exported="true">
+        </activity>
+
+        <activity
+            android:name=".ProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".FriendsActivity"
             android:exported="false" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="false"
             android:label="@string/title_activity_login" />
-        <activity
-            android:name=".profileactivity"
-            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
