--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'com.codepath.libraries:asynchttpclient:2.2.0'
     implementation 'androidx.core:core-ktx:1.10.0'
