--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,16 +14,23 @@
         android:theme="@style/Theme.PetTinder"
         tools:targetApi="31">
         <activity
-            android:name=".PetfindingActivity"
+            android:name=".ChattingActivity"
+            android:theme="@style/StylewithoutActionbar"
             android:exported="true">
-        </activity>
 
+        </activity>
+        <activity
+            android:name=".PetfindingActivity"
+            android:exported="true"></activity>
         <activity
             android:name=".ProfileActivity"
+            android:launchMode="singleTop"
             android:exported="false" />
         <activity
             android:name=".FriendsActivity"
-            android:exported="false" />
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="false"
@@ -31,11 +38,16 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+
+
+
         </activity>
     </application>
 
